RESOLVED FIXED209741
REGRESSION(r258829): [CoordinatedGraphics] Web view not updated after cross site navigation with PSON enabled
https://bugs.webkit.org/show_bug.cgi?id=209741
Summary REGRESSION(r258829): [CoordinatedGraphics] Web view not updated after cross s...
Carlos Garcia Campos
Reported 2020-03-30 08:01:16 PDT
Since r258829, the drawing area proxy of a provisional page ignores all messages until the load is committed. This is causing 2 problems for coordinated graphics drawing area. When not in accelerated compositing mode, Update message is sent before the commit is loaded, and the web process keeps waiting for the DidUpdate response message forever. When accelerated compositing mode is forced, the EnterAcceleratedCompositing message is also sent before the load is committed and ignored, so the UI process doesn't know it's in accelerated mode.
Attachments
Patch (2.84 KB, patch)
2020-03-30 08:05 PDT, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2020-03-30 08:05:01 PDT
Carlos Garcia Campos
Comment 2 2020-03-31 02:11:05 PDT
Radar WebKit Bug Importer
Comment 3 2020-03-31 02:12:12 PDT
Note You need to log in before you can comment on or make changes to this bug.